--- a/src/main/resources/templates/guessthenumber.html
+++ b/src/main/resources/templates/guessthenumber.html
@@ -64,21 +64,31 @@
 						</form>
 					</div>
 					<p>Comments:</p>
-					<ul>
-						<li th:each="comment : ${@guessTheNumberController.comments}"><span
-							th:text="${comment.content}"></span> <span
-							th:text="${comment.userName}"></span></li>
-					</ul>
+					<div th:if="${not @guessTheNumberController.comments.empty}">
+						<ul>
+							<li th:each="comment : ${@guessTheNumberController.comments}"><span
+								th:text="${comment.content}"></span> <span
+								th:text="${comment.userName}"></span></li>
+						</ul>
+					</div>
+					<div th:unless="${not @guessTheNumberController.comments.empty}">
+						<p>No comments yet.</p>>
+					</div>
 				</main>
 			</div>
 			<div class="col-md-4 col-12">
 				<aside>
 					<h4>Top scores</h4>
-					<ol>
-						<li th:each="score : ${@guessTheNumberController.scores}"><span
-							th:text="${score.userName}"></span> <span
-							th:text="${score.value}"></span></li>
-					</ol>
+					<div th:if="${not @guessTheNumberController.scores.empty}">
+						<ol>
+							<li th:each="score : ${@guessTheNumberController.scores}"><span
+								th:text="${score.userName}"></span> <span
+								th:text="${score.value}"></span></li>
+						</ol>
+					</div>
+					<div th:unless="${not @guessTheNumberController.scores.empty}">
+						<p>No top scores yet.</p>
+					</div>
 				</aside>
 				<aside>
 					<h4>Game Rating</h4>
@@ -86,12 +96,12 @@
 						<span th:text="${@guessTheNumberController.rating}"></span>
 					</div>
 					<div th:unless="${@guessTheNumberController.rating > 0}">
-						<span>Not rated yet</span>
+						<span>Not rated yet.</span>
 					</div>
 					<div th:if="${@mainController.logged}">
 						<form action="/addrating" method="post">
 							<input type="hidden" name="game" value="guessthenumber"></input>
-							<label>Your rating:<select name="rating">
+							<label>Your rating: <select name="rating">
 									<option value="">Please choose</option>
 									<option value="1">It's terrible</option>
 									<option value="2">I don't like it</option>
@@ -103,11 +113,6 @@
 						</form>
 					</div>
 				</aside>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				<footer> </footer>
 			</div>
 		</div>
 	</div>
