--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<title>Minesweeper</title>
+<title>Guess the number</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -10,17 +10,106 @@
 <link rel="stylesheet" href="/css/minesweeper.css" />
 </head>
 <body>
-	<h1>Minesweeper</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<header>
+					<h1>
+						<a href="/">Gamestudio</a>
+					</h1>
+					<h2>
+						<a href="/minesweeper">Minesweeper</a>
+					</h2>
+				</header>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-2 col-12">
+				<aside>
+					<h4>Current player:</h4>
+					<div th:if="${not @mainController.logged}">
+						You are not logged. Please <a href="/">log in</a>.
+					</div>
+					<div th:if="${@mainController.logged}">
+						You are logged as <span
+							th:text="${@mainController.loggedPlayer.name}"></span> <a
+							href="/logout">Log out</a>
+					</div>
+				</aside>
+			</div>
+			<div class="col-md-6 col-12">
+				<main>
+					<div class="game-field-container" th:utext="${@minesweeperController.HtmlField}"></div>
 
-	<div th:utext="${@minesweeperController.HtmlField}"></div>
-
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-		crossorigin="anonymous"></script>
-	<script>
-		window.jQuery
-				|| document.write('<script src="js\/jquery.min.js"><\/script>');
-	</script>
-	<script src="/js/minesweeper.js"></script>
+					<div th:if="${@mainController.logged}">
+						<form action="/addcomment" method="post">
+							<input type="hidden" name="game" value="minesweeper"></input> <label>Add
+								comment (255 chars max):<textarea name="content" rows="3"
+									cols="33"></textarea>
+							</label>
+							<button type=submit>Submit</button>
+						</form>
+					</div>
+					<p>Comments:</p>
+					<div th:if="${not @minesweeperController.comments.empty}">
+						<ul>
+							<li th:each="comment : ${@minesweeperController.comments}"><span
+								th:text="${comment.content}"></span> <span
+								th:text="${comment.userName}"></span></li>
+						</ul>
+					</div>
+					<div th:unless="${not @minesweeperController.comments.empty}">
+						<p>No comments yet.</p>
+					</div>
+				</main>
+			</div>
+			<div class="col-md-4 col-12">
+				<aside>
+					<h4>Top scores</h4>
+					<div th:if="${not @minesweeperController.scores.empty}">
+						<ol>
+							<li th:each="score : ${@minesweeperController.scores}"><span
+								th:text="${score.userName}"></span> <span
+								th:text="${score.value}"></span></li>
+						</ol>
+					</div>
+					<div th:unless="${not @minesweeperController.scores.empty}">
+						<p>No top scores yet.</p>
+					</div>
+				</aside>
+				<aside>
+					<h4>Game Rating</h4>
+					<div th:if="${@minesweeperController.rating > 0}">
+						<span th:text="${@minesweeperController.rating}"></span>
+					</div>
+					<div th:unless="${@minesweeperController.rating > 0}">
+						<span>Not rated yet</span>
+					</div>
+					<div th:if="${@mainController.logged}">
+						<form action="/addrating" method="post">
+							<input type="hidden" name="game" value="minesweeper"></input> <label>Your
+								rating:<select name="rating">
+									<option value="">Please choose</option>
+									<option value="1">It's terrible</option>
+									<option value="2">I don't like it</option>
+									<option value="3">Can't decide</option>
+									<option value="4">I like it</option>
+									<option value="5">I like it very much</option>
+							</select>
+							</label>
+							<button type=submit>Submit</button>
+						</form>
+					</div>
+				</aside>
+			</div>
+		</div>
+	</div>
+	    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="\/js\/jquery.min.js"><\/script>');
+    </script>
+    <script src="/js/minesweeper.js"></script>
+	
 </body>
 </html>
