--- a/src/main/resources/templates/puzzle.html
+++ b/src/main/resources/templates/puzzle.html
@@ -56,21 +56,31 @@
 						</form>
 					</div>
 					<p>Comments:</p>
-					<ul>
-						<li th:each="comment : ${@puzzleController.comments}"><span
-							th:text="${comment.content}"></span> <span
-							th:text="${comment.userName}"></span></li>
-					</ul>
+					<div th:if="${not @puzzleController.comments.empty}">
+						<ul>
+							<li th:each="comment : ${@puzzleController.comments}"><span
+								th:text="${comment.content}"></span> <span
+								th:text="${comment.userName}"></span></li>
+						</ul>
+					</div>
+					<div th:unless="${not @puzzleController.comments.empty}">
+						<p>No comments yet.</p>>
+					</div>
 				</main>
 			</div>
 			<div class="col-md-4 col-12">
 				<aside>
 					<h4>Top scores</h4>
-					<ol>
-						<li th:each="score : ${@puzzleController.scores}"><span
-							th:text="${score.userName}"></span> <span
-							th:text="${score.value}"></span></li>
-					</ol>
+					<div th:if="${not @puzzleController.scores.empty}">
+						<ol>
+							<li th:each="score : ${@puzzleController.scores}"><span
+								th:text="${score.userName}"></span> <span
+								th:text="${score.value}"></span></li>
+						</ol>
+					</div>
+					<div th:unless="${not @puzzleController.scores.empty}">
+						<p>No top scores yet.</p>
+					</div>
 				</aside>
 				<aside>
 					<h4>Game Rating</h4>
@@ -96,11 +106,6 @@
 						</form>
 					</div>
 				</aside>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				<footer> </footer>
 			</div>
 		</div>
 	</div>
