--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,6 +57,7 @@
 			<div class="col-md-8 col-12">
 				<a href="/guessthenumber">Guess the number</a><br />
 				<a href="/puzzle">Puzzle</a><br />
+				<a href="/pairs">Pairs</a><br />
 				<a href="/minesweeper">Minesweeper</a>
 			</div>
 		</div>
