--- a/src/main/resources/templates/pairs.html
+++ b/src/main/resources/templates/pairs.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<title>Minesweeper</title>
+<title>Pairs</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 	crossorigin="anonymous">
-<link rel="stylesheet" href="/css/minesweeper.css" />
+<link rel="stylesheet" href="/css/pairs.css" />
 </head>
 <body>
 	<div class="container">
@@ -18,7 +18,7 @@
 						<a href="/">Gamestudio</a>
 					</h1>
 					<h2>
-						<a href="/minesweeper">Minesweeper</a>
+						<a href="/pairs">Pairs</a>
 					</h2>
 				</header>
 			</div>
@@ -39,12 +39,11 @@
 			</div>
 			<div class="col-md-6 col-12">
 				<main>
-					<div class="game-field-container"
-						th:utext="${@minesweeperController.HtmlField}"></div>
+					<div class="game-field-container" th:utext="${@pairsController.HtmlField}"></div>
 
 					<div th:if="${@mainController.logged}">
 						<form action="/addcomment" method="post">
-							<input type="hidden" name="game" value="minesweeper"></input> <label>Add
+							<input type="hidden" name="game" value="pairs"></input> <label>Add
 								comment (255 chars max):<textarea name="content" rows="3"
 									cols="33"></textarea>
 							</label>
@@ -52,14 +51,14 @@
 						</form>
 					</div>
 					<p>Comments:</p>
-					<div th:if="${not @minesweeperController.comments.empty}">
+					<div th:if="${not @pairsController.comments.empty}">
 						<ul>
-							<li th:each="comment : ${@minesweeperController.comments}"><span
+							<li th:each="comment : ${@pairsController.comments}"><span
 								th:text="${comment.content}"></span> <span
 								th:text="${comment.userName}"></span></li>
 						</ul>
 					</div>
-					<div th:unless="${not @minesweeperController.comments.empty}">
+					<div th:unless="${not @pairsController.comments.empty}">
 						<p>No comments yet.</p>
 					</div>
 				</main>
@@ -67,28 +66,28 @@
 			<div class="col-md-4 col-12">
 				<aside>
 					<h4>Top scores</h4>
-					<div th:if="${not @minesweeperController.scores.empty}">
+					<div th:if="${not @pairsController.scores.empty}">
 						<ol>
-							<li th:each="score : ${@minesweeperController.scores}"><span
+							<li th:each="score : ${@pairsController.scores}"><span
 								th:text="${score.userName}"></span> <span
 								th:text="${score.value}"></span></li>
 						</ol>
 					</div>
-					<div th:unless="${not @minesweeperController.scores.empty}">
+					<div th:unless="${not @pairsController.scores.empty}">
 						<p>No top scores yet.</p>
 					</div>
 				</aside>
 				<aside>
 					<h4>Game Rating</h4>
-					<div th:if="${@minesweeperController.rating > 0}">
-						<span th:text="${@minesweeperController.rating}"></span>
+					<div th:if="${@pairsController.rating > 0}">
+						<span th:text="${@pairs.rating}"></span>
 					</div>
-					<div th:unless="${@minesweeperController.rating > 0}">
+					<div th:unless="${@pairsController.rating > 0}">
 						<span>Not rated yet</span>
 					</div>
 					<div th:if="${@mainController.logged}">
 						<form action="/setrating" method="post">
-							<input type="hidden" name="game" value="minesweeper"></input> <label>Your
+							<input type="hidden" name="game" value="pairs"></input> <label>Your
 								rating:<select name="rating">
 									<option value="">Please choose</option>
 									<option value="1">It's terrible</option>
@@ -105,7 +104,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 		crossorigin="anonymous"></script>
 	<script>
@@ -113,6 +112,6 @@
 				|| document
 						.write('<script src="\/js\/jquery.min.js"><\/script>');
 	</script>
-	<script src="/js/minesweeper.js"></script>
+	<script src="/js/pairs.js"></script>	
 </body>
 </html>
