--- a/src/main/resources/templates/puzzle.html
+++ b/src/main/resources/templates/puzzle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-<title>Guess the number</title>
+<title>Puzzle</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -91,7 +91,7 @@
 						<span>Not rated yet</span>
 					</div>
 					<div th:if="${@mainController.logged}">
-						<form action="/addrating" method="post">
+						<form action="/setrating" method="post">
 							<input type="hidden" name="game" value="puzzle"></input> <label>Your
 								rating:<select name="rating">
 									<option value="">Please choose</option>
