--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,9 +38,10 @@
 					<div th:if="${@mainController.registerFormVisible}">
 						<form action="/registernewplayer" method="post">
 							<div class="float-right">
-								<label class="float-right register-top">New username: <input type="text"
-									name="userName" /></label> <label class="float-right">Password: <input
-									type="password" name="passwd" /></label>
+								<label class="float-right register-top">New username: <input
+									type="text" name="userName" /></label> <label class="float-right">Password:
+									<input type="password" name="passwd" />
+								</label>
 							</div>
 							<div class="clear">
 								<button type="submit" class="create">Create new player</button>
@@ -55,10 +56,15 @@
 				</div>
 			</div>
 			<div class="col-md-8 col-12">
-				<a href="/guessthenumber">Guess the number</a><br />
-				<a href="/puzzle">Puzzle</a><br />
-				<a href="/pairs">Pairs</a><br />
-				<a href="/minesweeper">Minesweeper</a>
+				<div class="main-game-links">
+					<a href="/minesweeper"><img src="/img/index/minesweeper.png"
+						alt="Minesweeper game." /></a> <a href="/puzzle"><img
+						src="/img/index/puzzle.jpg" alt="Puzzle game." /></a> <a
+						href="/guessthenumber"><img
+						src="/img/index/guessthenumber.jpg" alt="Guess the number game." /></a>
+					<a href="/pairs"><img src="/img/index/pairs.jpg"
+						alt="Pairs game." /></a>
+				</div>
 			</div>
 		</div>
 	</div>
