--- a/src/main/resources/templates/puzzle.html
+++ b/src/main/resources/templates/puzzle.html
@@ -64,7 +64,7 @@
 						</ul>
 					</div>
 					<div th:unless="${not @puzzleController.comments.empty}">
-						<p>No comments yet.</p>>
+						<p>No comments yet.</p>
 					</div>
 				</main>
 			</div>
