--- a/src/main/resources/static/css/minesweeper.css
+++ b/src/main/resources/static/css/minesweeper.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'digital-7 mono';
+    src: url('/css/fonts/digital-7 (mono).ttf');
+}
+
 h1 {
 	text-align: center;
 }
@@ -55,6 +60,18 @@ textarea {
 	margin: 0 auto;
 }
 
+.border-outset {
+	border: 0.25em outset #B9B9B9;
+}
+
+.border-solid {
+	border: 0.25em solid #B9B9B9;
+}
+
+.border-inset {
+	border: 0.25em inset #B9B9B9;
+}
+
 .minesweeper-infobar {
 	display: flex;
 	justify-content: space-between;
@@ -64,16 +81,33 @@ textarea {
 	display: flex;
 }
 
-#timer {
+.info {
 	display: flex;
+	color: red;
+	background-color: black;
+	font-family: 'digital-7 mono';
+	line-height: 1.5em;	
+	font-size: 1.5em;
+	max-width: 1.5em;	
 }
 
-#mine-count {
-	display: flex;
+.center a {
+	text-decoration:none;
+    display: block;
 }
 
 #smile-icon {
+	margin: 0;
 	padding: 0;
-	max-width: 2em;
+	max-width: 2.15em;
 	background-color: #B9B9B9;
+	border: 0.20em outset #B9B9B9;	
+}
+
+#smile-icon:active {
+	border: 0.20em inset #B9B9B9;
+}
+
+.mine {
+	background-color: red;
 }
