--- a/src/main/resources/templates/guessthenumber.html
+++ b/src/main/resources/templates/guessthenumber.html
@@ -33,7 +33,7 @@
 					<div th:if="${@mainController.logged}">
 						You are logged as <span
 							th:text="${@mainController.loggedPlayer.name}"></span> <a
-							href="/logout">Log out</a>
+							href="/logout?game=guessthenumber">Log out</a>
 					</div>
 				</aside>
 			</div>
@@ -72,7 +72,7 @@
 						</ul>
 					</div>
 					<div th:unless="${not @guessTheNumberController.comments.empty}">
-						<p>No comments yet.</p>>
+						<p>No comments yet.</p>
 					</div>
 				</main>
 			</div>
