--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -24,7 +24,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-12">
+			<div class="col-md-3 col-12">
 				<aside>
 					<h4>Current player:</h4>
 					<div th:if="${not @mainController.logged}">
@@ -40,16 +40,34 @@
 			<div class="col-md-6 col-12">
 				<main>
 					<div class="game-field-container">
-						<div class="minesweeper-infobar">
-							<div id="mine-count" th:text="${@minesweeperController.mineCount}"></div>
-							<div class="center">
-								<button id="smile-icon" type="button"><img src="/img/minesweeper/smile.png" alt="Smile icon."/></button>
+						<div class="border-outset">
+							<div class="border-solid">
+								<div class="border-inset">
+									<div class="minesweeper-infobar">
+										<div class="info"
+											th:text="${@minesweeperController.mineCount}"></div>
+										<div class="center">
+											<a href="/minesweeper">
+												<button id="smile-icon" type="button">
+													<span th:switch="${@minesweeperController.GameState}">
+														<span th:case="'solved'"> <img
+															src="/img/minesweeper/won.png" alt="Smile icon." />
+													</span> <span th:case="'failed'"> <img
+															src="/img/minesweeper/lost.png" alt="Smile icon." />
+													</span> <span th:case="'playing'"> <img
+															src="/img/minesweeper/smile.png" alt="Smile icon." />
+													</span>
+													</span>
+												</button>
+											</a>
+										</div>
+										<div class="info" th:text="${@minesweeperController.seconds}"></div>
+									</div>
+									<div th:utext="${@minesweeperController.HtmlField}"></div>
+								</div>
 							</div>
-							<div id="timer" th:text="${@minesweeperController.seconds}"></div>
 						</div>
-						<div th:utext="${@minesweeperController.HtmlField}"></div>
 					</div>
-
 					<div th:if="${@mainController.logged}">
 						<form action="/addcomment" method="post">
 							<input type="hidden" name="game" value="minesweeper"></input> <label>Add
@@ -72,7 +90,7 @@
 					</div>
 				</main>
 			</div>
-			<div class="col-md-4 col-12">
+			<div class="col-md-3 col-12">
 				<aside>
 					<h4>Top scores</h4>
 					<div th:if="${not @minesweeperController.scores.empty}">
