--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -12,30 +12,13 @@ a:hover {
 	color: #007bff;
 }
 
-a.button {
-    margin-left: 9em;
-    text-decoration: none;
-    color: initial;
-}
-
-.register-top {
-	margin-top: 1em;
-}
-
-.clear {
-	clear: both;
-}
-
-.create {
-	margin-left: 10.9em;
-}
-
-.main-game-links {
+#main-game-links {
 	display: table;
-	margin: 0 auto;
-	max-width: 40em;	
+	margin: 2em auto 0 auto;
+	max-width: 40em;
 }
 
 img {
-	max-width: 100%;
+	min-width: 35%;
+	max-width: 35%;
 }
