--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 	crossorigin="anonymous">
 <link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/login-side.css">
 </head>
 <body>
-
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -19,51 +19,20 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4 col-12">
-				<div th:if="${not @mainController.logged}">
-					<p class="float-right">Not logged in?</p>
-					<form action="/login" method="post">
-						<div>
-							<label class="float-right">Username: <input type="text"
-								name="name" /></label> <label class="float-right">Password: <input
-								type="password" name="passwd" /></label>
-						</div>
-						<div class="float-left">
-							<a href="/registerform" class="button"><button type="button">Register</button></a>
-						</div>
-						<div class="float-right">
-							<button type="submit">Login</button>
-						</div>
-					</form>
-					<div th:if="${@mainController.registerFormVisible}">
-						<form action="/registernewplayer" method="post">
-							<div class="float-right">
-								<label class="float-right register-top">New username: <input
-									type="text" name="userName" /></label> <label class="float-right">Password:
-									<input type="password" name="passwd" />
-								</label>
-							</div>
-							<div class="clear">
-								<button type="submit" class="create">Create new player</button>
-							</div>
-						</form>
-					</div>
-				</div>
-				<div th:if="${@mainController.logged}">
-					You are logged as <span
-						th:text="${@mainController.loggedPlayer.name}"></span> <a
-						href="/logout">Logout</a><br />
-				</div>
+			<div class="col-md-3 col-12">
+				<aside th:replace="fragments :: login-side('index')"></aside>
 			</div>
-			<div class="col-md-8 col-12">
-				<div class="main-game-links">
-					<a href="/minesweeper"><img src="/img/index/minesweeper.png"
-						alt="Minesweeper game." /></a> <a href="/puzzle"><img
-						src="/img/index/puzzle.jpg" alt="Puzzle game." /></a> <a
-						href="/guessthenumber"><img
-						src="/img/index/guessthenumber.jpg" alt="Guess the number game." /></a>
-					<a href="/pairs"><img src="/img/index/pairs.jpg"
-						alt="Pairs game." /></a>
+			<div class="col-md-9 col-12">
+				<div id="main-game-links">
+					<div>
+						<a href="/minesweeper"><img src="/img/index/minesweeper.png"
+							alt="Minesweeper game." /></a> <a href="/puzzle"><img
+							src="/img/index/puzzle.jpg" alt="Puzzle game." /></a> <a
+							href="/guessthenumber"><img
+							src="/img/index/guessthenumber.jpg" alt="Guess the number game." /></a>
+						<a href="/pairs"><img src="/img/index/pairs.jpg"
+							alt="Pairs game." /></a>
+					</div>
 				</div>
 			</div>
 		</div>
