--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -8,34 +8,22 @@
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 	crossorigin="anonymous">
 <link rel="stylesheet" href="/css/minesweeper.css" />
+<link rel="stylesheet" href="/css/login-side.css" />
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
 				<header>
-					<h1>
-						<a href="/">Gamestudio</a>
-					</h1>
-					<h2>
-						<a href="/minesweeper">Minesweeper</a>
-					</h2>
+					<h1>Gamestudio</h1>
+					<h2>Minesweeper</h2>
 				</header>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3 col-12">
-				<aside>
-					<h4>Current player:</h4>
-					<div th:if="${not @mainController.logged}">
-						You are not logged. Please <a href="/">log in</a>.
-					</div>
-					<div th:if="${@mainController.logged}">
-						You are logged as <span
-							th:text="${@mainController.loggedPlayer.name}"></span> <a
-							href="/logout">Log out</a>
-					</div>
-				</aside>
+				<nav th:replace="fragments :: navigation('minesweeper')"></nav>
+				<aside th:replace="fragments :: login-side('minesweeper')"></aside>
 			</div>
 			<div class="col-md-6 col-12">
 				<main>
@@ -47,18 +35,16 @@
 										<div class="info"
 											th:text="${@minesweeperController.mineCount}"></div>
 										<div class="center">
-											<a href="/minesweeper">
-												<button id="smile-icon" type="button">
-													<span th:switch="${@minesweeperController.GameState}">
-														<span th:case="'solved'"> <img
-															src="/img/minesweeper/won.png" alt="Smile icon." />
-													</span> <span th:case="'failed'"> <img
-															src="/img/minesweeper/lost.png" alt="Smile icon." />
-													</span> <span th:case="'playing'"> <img
-															src="/img/minesweeper/smile.png" alt="Smile icon." />
-													</span>
-													</span>
-												</button>
+											<a href="/minesweeper" id="smile-icon"> <span
+												th:switch="${@minesweeperController.GameState}"> <span
+													th:case="'solved'"> <img
+														src="/img/minesweeper/won.png" alt="Smile icon." />
+												</span> <span th:case="'failed'"> <img
+														src="/img/minesweeper/lost.png" alt="Smile icon." />
+												</span> <span th:case="'playing'"> <img
+														src="/img/minesweeper/smile.png" alt="Smile icon." />
+												</span>
+											</span>
 											</a>
 										</div>
 										<div class="info" th:text="${@minesweeperController.seconds}"></div>
@@ -68,66 +54,11 @@
 							</div>
 						</div>
 					</div>
-					<div th:if="${@mainController.logged}">
-						<form action="/addcomment" method="post">
-							<input type="hidden" name="game" value="minesweeper"></input> <label>Add
-								comment (255 chars max):<textarea name="content" rows="3"
-									cols="33"></textarea>
-							</label>
-							<button type=submit>Submit</button>
-						</form>
-					</div>
-					<p>Comments:</p>
-					<div th:if="${not @minesweeperController.comments.empty}">
-						<ul>
-							<li th:each="comment : ${@minesweeperController.comments}"><span
-								th:text="${comment.content}"></span> <span
-								th:text="${comment.userName}"></span></li>
-						</ul>
-					</div>
-					<div th:unless="${not @minesweeperController.comments.empty}">
-						<p>No comments yet.</p>
-					</div>
+					<div th:replace="fragments :: comments('minesweeper')"></div>
 				</main>
 			</div>
 			<div class="col-md-3 col-12">
-				<aside>
-					<h4>Top scores</h4>
-					<div th:if="${not @minesweeperController.scores.empty}">
-						<ol>
-							<li th:each="score : ${@minesweeperController.scores}"><span
-								th:text="${score.userName}"></span> <span
-								th:text="${score.value}"></span></li>
-						</ol>
-					</div>
-					<div th:unless="${not @minesweeperController.scores.empty}">
-						<p>No top scores yet.</p>
-					</div>
-				</aside>
-				<aside>
-					<h4>Game Rating</h4>
-					<div th:if="${@minesweeperController.rating > 0}">
-						<span th:text="${@minesweeperController.rating}"></span>
-					</div>
-					<div th:unless="${@minesweeperController.rating > 0}">
-						<span>Not rated yet</span>
-					</div>
-					<div th:if="${@mainController.logged}">
-						<form action="/setrating" method="post">
-							<input type="hidden" name="game" value="minesweeper"></input> <label>Your
-								rating:<select name="rating">
-									<option value="">Please choose</option>
-									<option value="1">It's terrible</option>
-									<option value="2">I don't like it</option>
-									<option value="3">Can't decide</option>
-									<option value="4">I like it</option>
-									<option value="5">I like it very much</option>
-							</select>
-							</label>
-							<button type=submit>Submit</button>
-						</form>
-					</div>
-				</aside>
+				<aside th:replace="fragments :: score-side(minesweeper)"></aside>
 			</div>
 		</div>
 	</div>
