--- a/src/main/resources/templates/puzzle.html
+++ b/src/main/resources/templates/puzzle.html
@@ -8,104 +8,32 @@
 	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 	crossorigin="anonymous">
 <link rel="stylesheet" href="/css/puzzle.css" />
+<link rel="stylesheet" href="/css/login-side.css" />
 </head>
 <body>
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
 				<header>
-					<h1>
-						<a href="/">Gamestudio</a>
-					</h1>
-					<h2>
-						<a href="/puzzle">Puzzle</a>
-					</h2>
+					<h1>Gamestudio</h1>
+					<h2>Puzzle</h2>
+					<h3><a href="/puzzle">New game</a></h3>
 				</header>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-2 col-12">
-				<aside>
-					<h4>Current player:</h4>
-					<div th:if="${not @mainController.logged}">
-						You are not logged. Please <a href="/">log in</a>.
-					</div>
-					<div th:if="${@mainController.logged}">
-						You are logged as <span
-							th:text="${@mainController.loggedPlayer.name}"></span> <a
-							href="/logout">Log out</a>
-					</div>
-				</aside>
+			<div class="col-md-3 col-12">
+				<nav th:replace="fragments :: navigation('puzzle')"></nav>
+				<aside th:replace="fragments :: login-side('puzzle')"></aside>
 			</div>
 			<div class="col-md-6 col-12">
 				<main>
-					<div th:if="${not @puzzleController.solved}">
-						<div th:utext="${@puzzleController.HtmlField}"></div>
-					</div>
-					<div th:unless="${not @puzzleController.solved}">
-						<img src="/img/puzzle/puzzle.jpg" alt="Solved puzzle image." />
-						<p>Congratulations, You solved the puzzle.</p>
-					</div>
-					<div th:if="${@mainController.logged}">
-						<form action="/addcomment" method="post">
-							<input type="hidden" name="game" value="puzzle"></input> <label>Add
-								comment (255 chars max):<textarea name="content" rows="3"
-									cols="33"></textarea>
-							</label>
-							<button type=submit>Submit</button>
-						</form>
-					</div>
-					<p>Comments:</p>
-					<div th:if="${not @puzzleController.comments.empty}">
-						<ul>
-							<li th:each="comment : ${@puzzleController.comments}"><span
-								th:text="${comment.content}"></span> <span
-								th:text="${comment.userName}"></span></li>
-						</ul>
-					</div>
-					<div th:unless="${not @puzzleController.comments.empty}">
-						<p>No comments yet.</p>
-					</div>
+					<div th:utext="${@puzzleController.HtmlField}"></div>
+					<div th:replace="fragments :: comments('puzzle')"></div>
 				</main>
 			</div>
-			<div class="col-md-4 col-12">
-				<aside>
-					<h4>Top scores</h4>
-					<div th:if="${not @puzzleController.scores.empty}">
-						<ol>
-							<li th:each="score : ${@puzzleController.scores}"><span
-								th:text="${score.userName}"></span> <span
-								th:text="${score.value}"></span></li>
-						</ol>
-					</div>
-					<div th:unless="${not @puzzleController.scores.empty}">
-						<p>No top scores yet.</p>
-					</div>
-				</aside>
-				<aside>
-					<h4>Game Rating</h4>
-					<div th:if="${@puzzleController.rating > 0}">
-						<span th:text="${@puzzleController.rating}"></span>
-					</div>
-					<div th:unless="${@puzzleController.rating > 0}">
-						<span>Not rated yet</span>
-					</div>
-					<div th:if="${@mainController.logged}">
-						<form action="/setrating" method="post">
-							<input type="hidden" name="game" value="puzzle"></input> <label>Your
-								rating:<select name="rating">
-									<option value="">Please choose</option>
-									<option value="1">It's terrible</option>
-									<option value="2">I don't like it</option>
-									<option value="3">Can't decide</option>
-									<option value="4">I like it</option>
-									<option value="5">I like it very much</option>
-							</select>
-							</label>
-							<button type=submit>Submit</button>
-						</form>
-					</div>
-				</aside>
+			<div class="col-md-3 col-12">
+				<aside th:replace="fragments :: score-side(puzzle)"></aside>
 			</div>
 		</div>
 	</div>
