Added disclaimer footer and some final fixes.

--- a/src/main/resources/static/css/minesweeper.css
+++ b/src/main/resources/static/css/minesweeper.css
@@ -118,7 +118,7 @@ textarea {
 }
 
 .comment-username {
-	max-width: 100;
+	max-width: 100%;
 }
 
 #comments-heading {
@@ -127,4 +127,9 @@ textarea {
 
 #navigation {
 	text-align: right;
+}
+
+footer {
+	text-align: center;
+	margin-top: 3em;
 }
