--- a/src/main/resources/static/css/pairs.css
+++ b/src/main/resources/static/css/pairs.css
@@ -64,7 +64,7 @@ textarea {
 }
 
 .comment-username {
-	max-width: 100;
+	max-width: 100%;
 }
 
 #comments-heading {
@@ -73,4 +73,9 @@ textarea {
 
 #navigation {
 	text-align: right;
+}
+
+footer {
+	text-align: center;
+	margin-top: 3em;
 }
