--- a/src/main/resources/static/css/guessthenumber.css
+++ b/src/main/resources/static/css/guessthenumber.css
@@ -32,7 +32,7 @@ textarea {
 }
 
 .comment-username {
-	max-width: 100;
+	max-width: 100%;
 	padding-bottom: 1.5em;
 }
 
@@ -42,4 +42,9 @@ textarea {
 
 #navigation {
 	text-align: right;
+}
+
+footer {
+	text-align: center;
+	margin-top: 3em;
 }
