Changed heading of footer.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -143,7 +143,7 @@
 		</div>
 	</aside>
 	<footer th:fragment="footer">
-		<h4>Disclaimer</h4>
+		<h4>Credits</h4>
 		<p>This project was made under guidance of teachers from IT
 			department of Technical University in Kosice in Slovakia as part of
 			T-Systems IT Trainee Development Academy program. Part of this
