--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -86,6 +86,7 @@
 				</form>
 			</div>
 		</div>
+		<p id="message" th:text="${@mainController.message} != null ? ${@mainController.message} : ''"></p>
 	</aside>
 	<div th:fragment="comments (game)">
 		<div th:if="${@mainController.logged}">
