--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -31,11 +31,11 @@
 				</div>
 				<div>
 					<div class="float-button">
-						<button type="submit">Login</button>
+						<button type="submit" class="btn btn-primary">Login</button>
 					</div>
 					<div class="float-button" id="register-button">
 						<a th:href="@{'/registerform?origin=' + ${origin}}"
-							class="anchor-button">Register</a>
+							class="anchor-button btn btn-primary">Register</a>
 					</div>
 				</div>
 			</form>
@@ -54,7 +54,7 @@
 						</div>
 					</div>
 					<div id="create-button" class="float-right">
-						<button type="submit">Create new player</button>
+						<button type="submit" class="btn btn-primary">Create new player</button>
 					</div>
 				</form>
 			</div>
@@ -66,7 +66,7 @@
 						th:text="${@mainController.loggedPlayer.name} + '.'"></span>
 				</h4>
 				<a th:href="@{'/logout?origin=' + ${origin}}"
-					class="anchor-button float-right">Logout</a>
+					class="anchor-button btn btn-primary float-right">Logout</a>
 				<h4 id="changepwd-heading">Change password:</h4>
 				<form action="/changepwd" method="post">
 					<input type="hidden" name="origin" th:value="${origin}" />
@@ -81,7 +81,7 @@
 						</div>
 					</div>
 					<div id="change-button" class="float-right">
-						<button type="submit">Change password</button>
+						<button type="submit" class="btn btn-primary">Change password</button>
 					</div>
 				</form>
 			</div>
@@ -94,7 +94,7 @@
 				<input type="hidden" name="game" th:value="${game}" /> <label>Add
 					comment (255 chars max):<textarea name="content" rows="3" cols="33"></textarea>
 				</label>
-				<button type=submit>Submit</button>
+				<button type=submit class="btn btn-primary">Submit</button>
 			</form>
 		</div>
 		<h4 id="comments-heading">Comments:</h4>
@@ -139,7 +139,7 @@
 						<option value="5">I like it very much</option>
 				</select>
 				</label>
-				<button type=submit>Submit</button>
+				<button type=submit class="btn btn-primary">Submit</button>
 			</form>
 		</div>
 	</aside>
@@ -151,7 +151,7 @@
 			webpage, specifically game Minesweeper, uses proprietary font
 			"Digital-7" from author Alexander Sizenko and for password hashing
 			is used Java implementation of algorithm Scrypt. Webpage is built
-			on frameworks Thymeleaf and Spring with Java as backend.</p>
+			on Spring framefork, Thymeleaf templates and Java as a backend.</p>
 	</footer>
 </body>
 </html>
